# tinyprocess

./: .gitignore  CMakeLists.txt  README.md  process  process.c  process.h
include/: tp_core.h  tp_logger.h  tp_types.h
src/: main.c  process.c  process.h  tp_core.c  tp_logger.c
